# hsplat

./: .gitignore  LICENSE  README.md
dsplat/: README.md  main_dpac_encoding.py
hsplat/: .gitignore  algorithms.py  load_data.py  main.py  primitives.py  propagations.py  utils.py
hsplat/cuda/: _backend.py  _wrapper.py
hsplat/cuda/csrc/: CMakeLists.txt  bindings.h  cgh_gaussians_naive.cu  ext.cpp  test.cu
hsplat/scripts/: main_gws.sh  main_gws_light.sh  main_meshes.sh  main_pc.sh
hsplat/viz_utils/: __init__.py  parser.py  visualization.py
